<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/TV_command_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/IV_command_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Turn on PC" />

    <ImageView
        android:id="@+id/IV_command_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_play"
        app:tint="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/TV_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/TV_command_name"
        app:layout_constraintStart_toStartOf="@+id/TV_command_name"
        app:layout_constraintTop_toBottomOf="@+id/TV_command_name"
        tools:text="Uses WakeOnLAN to turn on main PC at home" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_command_moreInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/IV_command_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_description">

        <TextView
            android:id="@+id/TV_command_usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV_command_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/TV_command_usernameLabel"
            app:layout_constraintEnd_toStartOf="@+id/IV_command_edit"
            app:layout_constraintStart_toEndOf="@+id/TV_command_usernameLabel"
            app:layout_constraintTop_toTopOf="@+id/TV_command_usernameLabel"
            tools:text="stasky" />

        <TextView
            android:id="@+id/TV_command_passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/TV_command_usernameLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_usernameLabel" />

        <TextView
            android:id="@+id/TV_command_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/TV_command_username"
            app:layout_constraintStart_toEndOf="@+id/TV_command_passwordLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_username"
            tools:text="************" />

        <TextView
            android:id="@+id/TV_command_serverLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/server"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/TV_command_passwordLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_passwordLabel" />

        <TextView
            android:id="@+id/TV_command_server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/TV_command_password"
            app:layout_constraintStart_toEndOf="@+id/TV_command_serverLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_password"
            tools:text="myssh.connection.com" />

        <TextView
            android:id="@+id/TV_command_lastTimeUsedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_time_used"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/TV_command_serverLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_serverLabel" />

        <TextView
            android:id="@+id/TV_command_lastTimeUsed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/TV_command_server"
            app:layout_constraintStart_toEndOf="@+id/TV_command_lastTimeUsedLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_server"
            tools:text="12/05/2022 12:58:32" />

        <TextView
            android:id="@+id/TV_command_logLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/log"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/TV_command_lastTimeUsedLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_lastTimeUsedLabel" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/NSV_command_log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/log"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="@+id/TV_command_lastTimeUsed"
            app:layout_constraintStart_toStartOf="@+id/TV_command_logLabel"
            app:layout_constraintTop_toBottomOf="@+id/TV_command_logLabel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_command_logScroll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="It completed successfully without errors!" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/IV_command_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit"
            app:tint="@android:color/holo_orange_dark" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/IV_command_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />
</androidx.constraintlayout.widget.ConstraintLayout>